--- a/contactus.html
+++ b/contactus.html
@@ -92,7 +92,7 @@
                 <div class="all">
                     <div class="map">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.003832602016!2d105.79471111476269!3d20.99248348601816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135acb858b8d4d1%3A0xcd7ad37bd441a6d9!2zVHLGsOG7nW5nIFRIUFQgY2h1ecOqbiBLaG9hIGjhu41jIFThu7EgTmhpw6puLCDEkEhRR0hO!5e0!3m2!1svi!2s!4v1647094780354!5m2!1svi!2s"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> allowfullscreen="" loading="lazy"></iframe>
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
                     </div>
                     <div class="body">
                         <div class="col-md-7">
